Add function add

--- a/to-do-list.html
+++ b/to-do-list.html
@@ -7,12 +7,12 @@
   </head>
   <body>
     <h1>My to do list</h1>
-    <h2>Day of week</h2>
-    <ul class="day-list">
+    <h2>Day of week</h2> <ul class="day-list">
         <li class="day">
             <p>Monday</p>
-            <input type="text">
-            <button onclick="">add</button>
+            <input type="text" id="monday-input">
+            <button onclick="add()">add</button>
+            <ol id="Mondaylist"></ol>
         </li>
         <li class="day">Tuesday</li>
         <li class="day">Wednesday</li>
