--- a/to-do-list.html
+++ b/to-do-list.html
@@ -5,7 +5,7 @@
     <link rel="stylesheet" href="to-do-list.css"/>
     <title>To do list</title>
   </head>
-  <body>
+  <body class="My to do list">
     <h1 class="title">My to do list</h1>
     <h2 class="week">Day of week</h2>
      <ul class="day-list">
@@ -19,12 +19,38 @@
           <p>Tuesday</p>
           <input type="text" id="tuesday-input">
           <button onclick="addTuesday()">add</button>
-          <ol id="Tuesdaylist"></ol></li>
-        <li class="day">Wednesday</li>
-        <li class="day">Thursday</li>
-        <li class="day">Friday</li>
-        <li class="day">Saturday</li>
-        <li class="day">Sunday</li>
+          <ol id="Tuesdaylist"></ol>
+        </li>
+        <li class="day">
+          <p>Wednesday</p>
+          <input type="text" id="wednesday-input">
+          <button onclick="addWednesday()">add</button>
+          <ol id="Wednesdaylist"></ol>
+        </li>
+        <li class="day">
+          <p>Thursday</p>
+          <input type="text" id="thursday-input">
+          <button onclick="addThursday()">add</button>
+          <ol id="Thursdaylist"></ol>
+        </li>
+        <li class="day">
+          <p>Friday</p>
+          <input type="text" id="freiday-input">
+          <button onclick="addFreiday()">add</button>
+          <ol id="Freidaylist"></ol>
+        </li>
+        <li class="day">
+          <p>Saturday</p>
+          <input type="text" id="saturday-input">
+          <button onclick="addSaturday()">add</button>
+          <ol id="Saturdaylist"></ol>
+        </li>
+        <li class="day">
+          <p>Sunday</p>
+          <input type="text" id="sunday-input">
+          <button onclick="addSunday()">add</button>
+          <ol id="Sundaylist"></ol>
+        </li>
       </ul>
   </body>
   <script src="to-do-list.js"></script>
